zeit.imp changes
================

0.3 (unreleased)
++++++++++++++++

0.2 (2009-01-22)
++++++++++++++++

- Anpassen der Bildposition etc, wenn das Browserfenster die Größe ändert oder
  die Seitenleiste ein- oder ausgefahren wird.
- Extra Berechtigung für das Benutzen.
- Regler für Helligkeit, Kontrast, Schärfe und Farbe.

0.1 (2009-01-19)
++++++++++++++++

- erstes Release.