@@ -46,7 +46,9 @@ eggs =
    ${test:eggs}
    zope.app.server
    zc.selenium
-site.zcml = ${i18n:zcml}
+site.zcml =
+    ${i18n:zcml}
+    <include package="zeit.cms" file="selenium.zcml" />
 
 [demo]
 recipe = zc.zope3recipes:instance
